# Linear-Systems

./: AudioHandler.py  README.md  pyproject.toml  test.txt  tree.py
Linear_Systems.egg-info/: PKG-INFO  SOURCES.txt
classes/: class5.py  class6.py
lib/: AudioHandler.py  Math.py  RW.py
